--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
+# python-dotenv
+# pandas
+# numpy
+# pymongo
+# certifi
+# pymongo[srv]
+# scikit-learn
+# mlflow
+# pyaml
+# dagshub
+# fastapi
+# uvicorn
+# python-multipart
+
+
+# ##-e . 
+
 python-dotenv
 pandas
 numpy
-pymongo
+pymongo>=4.0,<5.0
 certifi
-pymongo[srv]==3.6
 scikit-learn
 mlflow
-pyaml
+pyyaml
 dagshub
 fastapi
 uvicorn
 python-multipart
-
-
-##-e . 
